*Add pre-set password requirements in cfg *Add password requirement additions to config[global

--- a/aupp.cfg
+++ b/aupp.cfg
@@ -68,3 +68,33 @@ alectourl=https://github.com/yangbh/Hammer/raw/b0446396e8d67a7d4e53d6666026e0782
 
 [downloader]
 dicturl=http://ftp.funet.fi/pub/unix/security/passwd/crack/dictionaries/
+
+# [Preset Password Requirements for common accounts]
+[netflix]
+# At least length
+length=8
+uppercase=true
+lowercase=true
+numbers=true
+specialchars=true
+
+[instagram]
+length=6
+uppercase=true
+lowercase=true
+numbers=true
+specialchars=true
+
+[gmail]
+length=6
+uppercase=true
+lowercase=true
+numbers=true
+specialchars=true
+
+[apple]
+length=6
+uppercase=true
+lowercase=true
+numbers=true
+specialchars=true
