Add preset password requirements in aupp.cfg *Addparalell_processing function *Add filter_password function *Update main function *Add math,multiprocessing, and concurrent imports *Run black

--- a/aupp.cfg
+++ b/aupp.cfg
@@ -73,28 +73,28 @@ dicturl=http://ftp.funet.fi/pub/unix/security/passwd/crack/dictionaries/
 [netflix]
 # At least length
 length=8
-uppercase=true
-lowercase=true
-numbers=true
-specialchars=true
+uppercase=True
+lowercase=True
+numbers=True
+special_chars=True
 
 [instagram]
 length=6
-uppercase=true
-lowercase=true
-numbers=true
-specialchars=true
+uppercase=True
+lowercase=True
+numbers=True
+special_chars=True
 
 [gmail]
 length=6
-uppercase=true
-lowercase=true
-numbers=true
-specialchars=true
+uppercase=True
+lowercase=True
+numbers=True
+special_chars=True
 
 [apple]
 length=6
-uppercase=true
-lowercase=true
-numbers=true
-specialchars=true
+uppercase=True
+lowercase=True
+numbers=True
+special_chars=True
