--- a/aupp.cfg
+++ b/aupp.cfg
@@ -1,7 +1,7 @@
 # [ aupp.cfg ]
 #
 # This is configuration file for aupp.py
-#
+#update
 
 # There are no options to configure the application within it. The app reads it,
 # does not change it. I'm hoping you'll figure out how to looking at this.
